services/client/src/app/hymnal/hymnal.component.scss
.mat-card.viewer-card {
  width: calc(100% - 50px);
  /* height is 100% - height of harder card (115px) - height of collapsed calendar card (135px) */
  height: calc(100% - 250px);
  margin: 25px auto;
  padding: 0;

  &.fxClass-xs,
  &.fxClass-sm {
    width: calc(100% - 20px);
    height: calc(100% - 185px);
    margin: 10px auto;
  }

  app-viewer, app-metadata {
    display: block;
    width: 100%;
    height: 100%;
  }
}

.mat-card.calendar-card {
  width: calc(100% - 50px);
  margin: 25px auto;
  padding: 0;

  &.fxClass-xs,
  &.fxClass-sm {
    width: calc(100% - 20px);
    margin: 10px auto;
  }

  app-calendar {
    display: block;
    width: 100%;
    height: 100%;
  }
}

